# AutoInsight_AI

./: .gitignore  README.md  crew.py  crew_1.py  db_helper.py  main.py  mainn.py  pyproject.toml  report.md  requirements.txt  router.py  streamlit_agent_ui.py  test_llm.py
vc_agent/: README.md  crew.py  first.py  pyproject.toml  requirements.txt  test_llm.py
vc_agent/src/vc_agent/: crew.py  main.py
vc_agent/src/vc_agent/config/: agents.yaml  tasks.yaml
vc_agent/src/vc_agent/tools/: custom_tool.py
