[project]
name = "vc_agent"
version = "0.1.0"
description = "VC_agent using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.165.1,<1.0.0",
    "streamlit>=1.48.1",
]

[project.scripts]
vc_agent = "vc_agent.main:run"
run_crew = "vc_agent.main:run"
train = "vc_agent.main:train"
replay = "vc_agent.main:replay"
test = "vc_agent.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
